--- a/css/style.css
+++ b/css/style.css
@@ -386,44 +386,51 @@ header .inner {
 .mp-slider .mp-ban-1 .row-1 {
 	padding:40px 0 0 0;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-1 .row-2 {
 	font-size:110px;
 	line-height:130px;
 	margin:-45px 0 0 0;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-1 .row-3 {
 	margin:-40px 0 0 0;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-2 .row-1 {
 	padding:35px 0 0 0;
 	font-size:93px;
 	line-height:110px;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-2 .row-2, .mp-slider .mp-ban-2 .row-3 {
 	color:#ad0000;
 	margin:-40px 0 0 0;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-3 .row-1 {
 	padding:35px 0 0 0;
 	font-size:92px;
 	line-height:110px;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 .mp-slider .mp-ban-3 .row-2, .mp-slider .mp-ban-3 .row-3 {
 	margin:-40px 0 0 0;
 	font-family: 'Passion One';
-  	font-style: bold;
+  	font-style: normal;
+	font-weight: 400;
 }
 /********************** Navigation ************************/
 nav {
