trying manual font change

--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,7 @@
 @import url(forms.css);
 @import url(http://fonts.googleapis.com/css?family=Passion+One);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,400italic);
-/* latin-ext */
-@font-face {
-  font-family: 'Passion One';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Passion One Regular'), local('PassionOne-Regular'), url(https://fonts.gstatic.com/s/passionone/v10/PbynFmL8HhTPqbjUzux3JEuf9lvQ6Q.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Passion One';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Passion One Regular'), local('PassionOne-Regular'), url(https://fonts.gstatic.com/s/passionone/v10/PbynFmL8HhTPqbjUzux3JEuR9ls.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+
 body {
 	background:url(../images/body-bg.gif) 50% 0;
 	font:12px/18px Arial, Helvetica, sans-serif;
@@ -401,14 +386,17 @@ header .inner {
 }
 .mp-slider .mp-ban-1 .row-1 {
 	padding:40px 0 0 0;
+	font-family: Impact;
 }
 .mp-slider .mp-ban-1 .row-2 {
 	font-size:110px;
 	line-height:130px;
 	margin:-45px 0 0 0;
+	font-family: Helvetica;
 }
 .mp-slider .mp-ban-1 .row-3 {
 	margin:-40px 0 0 0;
+	font-family: Palatino;
 }
 .mp-slider .mp-ban-2 .row-1 {
 	padding:35px 0 0 0;
